# stealthy-scraping-tools-ptry

./: .gitignore  .pre-commit-config.yaml  README.md  ddc.py  example.py  immobilienscout24.py  lufthansa-de.py  package-lock.json  package.json  pyproject.toml  requirements.txt
src/: __init__.py
src/html_assassin/: crawl.py
src/html_assassin/behavior/: behavior.py  cdp_wrapper.py  sst_utils.py
src/html_assassin/cdp/: coords.js  eval_js.js
src/html_assassin/configuration/: logging_configuration.py
